# final-project-Noratho

./: CMakeLists.txt  PROPOSAL.md  README.md
apps/: antares_main.cc  antares_visualization.cc
include/core/: character_data_model.h  map_model.h  move_handler.h  move_model.h  player_model.h  world_model.h
include/visualizer/: antares_app.h  visualizer_helpers.h  world_visualizer.h
resources/character_json/: player.json
src/core/: character_data_model.cc  map_model.cc  move_handler.cc  move_model.cc  player_model.cc  world_model.cc
src/visualizer/: antares_app.cc  visualizer_helpers.cc  world_visualizer.cc
tests/: antares_tests.cc  test_main.cc
